@startuml user
' !theme resume-light
' !theme cerulean-outline
' !theme sketchy-outline

package user {

  package domain {

    class UserDataMapper <<Entity>> {
      -id : UUID
      -username : String
      -password : String
      ~authorities : List<Authority>
      +User(Builder)
      {static} +builder() : Builder
    }

    class Builder <<static>> {
      +username(String) : Builder
      +password(String) : Builder
      +build() : User
    }
    note left: Builder

    class UserRequest {
      -username : String
      -password : String
    }

    class UserResponse {
      -id : UUID
      -username : String
    }
  }

  package presentation {

    class UserController<UserRequest, UUID> <<Controller>>  extends AbstractController {
      -userService : UserService
      +create(UserRequest) : ResponseEntity<?>
      +readAll() : ResponseEntity<?>
      +readOne(UUID) : ResponseEntity<?>
      +update(UUID, UserRequest) : ResponseEntity<?>
      +delete(UUID) : ResponseEntity<?>
    }
  }

  package application {
    class UserService <<Service>> {
      -factory : UserFactory
      -requestAdapter : UserDtoRequestAdapter
      -responseAdapter : UserDtoResponseAdapter
      -repository : UserJpaRepository
      -passwordEncoder : PasswordEncoder
      +createUser(UserRequest) : UserResponse
      +getUsers() : List<UserResponse>
      +getUserById(UUID) : UserResponse
      +upadteUserById(UUID, UserRequest) : UserResponse
      +deleteUserById(UUID) : void
    }
  }
  note left: Facade

  package infrastructure {
    interface UserJpaRepository <<Repository>>
  }

  UserController ..> UserService
  UserService ..> UserJpaRepository
  UserJpaRepository ..> UserDataMapper

  UserDataMapper *--> Builder

  UserService ..> UserRequest
  UserService ..> UserResponse
}

@enduml
